<!--
  ~ Copyright 2015 Alexander Martinz
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">MaterialPreferences</string>

    <string name="category_dummy_title">I am a category title!</string>
    <string name="category_dummy_icon_title">Icon and category title works as well</string>
    <string name="dummy_summary">I am the awesome summary</string>

    <string name="dummy_standalone_summary">I am a plain preference without card optics</string>
    <string name="dummy_standalone_card_summary">I am a plain preference with card optics and an icon at my left side</string>

    <string name="list_dummy_one_title">Favorite CPU governor</string>
    <string name="list_dummy_one_summary">Only geeks will know what it means</string>

    <string name="edittext_dummy_one_title">Eaten bananas</string>
    <string name="edittext_dummy_one_summary">Enter the amount of eaten bananas to measure how much monkey you are</string>

    <string name="switch_dummy_one_title">Automated money generation</string>
    <string name="switch_dummy_one_summary">Earn money while you are sleeping or watching TV</string>
    <string name="switch_dummy_two_title">Transparent politics</string>
    <string name="switch_dummy_two_summary">Stops corruption and grants the privilige to have insight about the state\'s operations to everyone</string>

    <string name="category_dynamic_title">Category for dynamically created preferences</string>
</resources>
